# selio-cart

./: Dockerfile  Makefile  README.md  REST_API.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: notify-proto-changes.yml  publish-protos.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: db.py  main.py  models.py  schemas.py  settings.py
app/api/v1/: routes_read.py  routes_write.py
app/config/: dev.yaml  prod.yaml
app/grpc/: server.py  utils.py
app/grpc/protos/: cart.proto
app/repositories/: cart_repo.py
app/services/: cart_service.py
helm/: Chart.yaml  values.yaml
helm/templates/: configmap.yaml  deployment.yaml  hpa.yaml  job-migrate.yaml  secret.yaml  service-grpc.yaml  service-http.yaml
protos_py/: README.md  pyproject.toml
tests/: test_grpc_basic.py  test_rest_basic.py
