[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sellio-cart"
version = "0.1.0"
description = "Sellio Cart microservice: FastAPI (RO), gRPC (RW), SQLAlchemy async, Alembic"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Sellio", email = "dev@sellio.local" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.1",
  "grpcio>=1.64.0",
  "grpcio-tools>=1.64.0",
  "protobuf>=5.27.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "alembic*", "helm*", "protos_py*"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[dependency-groups]
dev = [
  "ruff>=0.6.0",
]


